# rust-bowling-silly-app

./: Cargo.toml  README.md  tags
src/: bowling.rs  main.rs
src/test_fixtures/: app.rs
static/style/: base.css
templates/: home.html
templates/layout/: base.html
