[package]
name = "rust-bowling-silly-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-http = "3.13.1"
actix-web = "4.14.0"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["actix-web-4"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
speculoos = "0.13.0"
